Fixing broken css on chromium browsers

--- a/index.css
+++ b/index.css
@@ -20,12 +20,11 @@ h2 {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-auto-rows: max-content;
+  grid-template-columns: repeat(2, minmax(250px, 1fr));
   justify-content: center;
   align-content: center;
+  justify-items: center;
   overflow: hidden;
-  position: relative;
 }
 
 .navbar {
@@ -36,7 +35,7 @@ h2 {
   bottom: 0;
   max-width: 100%;
   max-height: 100%;
-  background-color: white;
+  background-color: black;
   z-index: -1;
   padding: 2rem;
   transition: all 200ms ease-out;
@@ -48,12 +47,12 @@ h2 {
 
 .navbar a {
   font-size: 3rem;
-  color: black;
+  color: white;
   position: relative;
 }
 
 .navbar a:visited {
-  color: black;
+  color: white;
 }
 
 .navbar a::after {
@@ -98,7 +97,7 @@ h2 {
 }
 
 .landing {
-  grid-area: 1 / 1 / 2 / 4;
+  grid-area: 1 / 1 / 2 / 3;
   width: 100vw;
   height: 100vh;
   /* background-color: rgb(150, 225, 255); */
@@ -146,9 +145,10 @@ h2 {
 }
 
 .about {
-  grid-area: 2 / 1 / 3 / 5;
+  grid-area: 2 / 1 / 3 / 2;
   padding: 1rem 3rem;
   color: #333;
+  max-width: 90%;
 }
 
 .gradient-border {
@@ -176,19 +176,18 @@ h2 {
 }
 
 .face {
-  grid-area: 2 / 5 / 3 / 7;
-  width: 80%;
-  margin: 0 auto;
+  grid-area: 2 / 2 / 3 / 3;
 }
 
 .face img {
   height: auto;
-  width: 100%;
+  max-width: 100%;
   align-self: center;
+  border-radius: 25px;
 }
 
 .education {
-  grid-area: 3 / 1 / 4 / 4;
+  grid-area: 3 / 1 / 4 / 2;
   margin: 2rem auto;
   padding: 2rem;
   max-width: 100%;
@@ -204,7 +203,7 @@ h2 {
 }
 
 .skills {
-  grid-area: 3 / 4 / 4 / 7;
+  grid-area: 3 / 2 / 4 / 3;
   margin: 2rem auto;
   display: flex;
   flex-flow: column nowrap;
@@ -230,7 +229,7 @@ h2 {
 }
 
 .projects {
-  grid-area: 4 / 2 / 5 / 6;
+  grid-area: 4 / 1 / 5 / 3;
   margin-top: 4rem;
 }
 
@@ -308,7 +307,7 @@ h2 {
 }
 
 .contact {
-  grid-area: 5 / 3 / 6 / 5;
+  grid-area: 5 / 1 / 6 / 3;
   display: flex;
   justify-content: center;
   padding: 2rem;
